--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@ header { background: var(--primary); color: white; padding: 15px 5%; display: fl
     </div>
 </header>
 
-<!-- صفحة المواطن -->
 <div class="container" id="citizenPage">
     <div class="card">
         <h2 class="page-title">تسجيل بيانات المركبة</h2>
@@ -89,7 +88,6 @@ header { background: var(--primary); color: white; padding: 15px 5%; display: fl
         </div>
         <button id="submitBtn">تأكيد البيانات وحفظ الطلب ✅</button>
 
-        <!-- أزرار المواطن دائمًا -->
         <div id="citizenActions" style="margin-top:20px; display:flex; gap:10px; flex-wrap: wrap;">
             <button id="callBtn" style="background:#2980b9; color:white; border:none; padding:10px 20px; border-radius:8px; cursor:pointer;">📞 اتصل</button>
             <button id="waBtn" style="background:#25D366; color:white; border:none; padding:10px 20px; border-radius:8px; cursor:pointer;">💬 واتساب</button>
@@ -97,7 +95,6 @@ header { background: var(--primary); color: white; padding: 15px 5%; display: fl
     </div>
 </div>
 
-<!-- صفحة المشرف -->
 <div id="adminPage" class="admin-content">
     <div style="display:flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
         <h2 style="margin:0; color:var(--primary);">مراجعة الطلبات</h2>
@@ -135,99 +132,57 @@ header { background: var(--primary); color: white; padding: 15px 5%; display: fl
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getFirestore, collection, addDoc, onSnapshot, query, orderBy, deleteDoc, doc, updateDoc, getDocs } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-const firebaseConfig = {
-    apiKey: "AIzaSyC0GsXy-mODZ_O2uqFJMKsjmK9bNDbrU9U",
-    authDomain: "system-storage-bd0ed.firebaseapp.com",
-    projectId: "system-storage-bd0ed",
-    storageBucket: "system-storage-bd0ed.firebasestorage.app",
-    messagingSenderId: "501351821676",
-    appId: "1:501351821676:web:2926c58dedfc536cea8349"
-};
+const firebaseConfig = { apiKey:"AIzaSyC0GsXy-mODZ_O2uqFJMKsjmK9bNDbrU9U", authDomain:"system-storage-bd0ed.firebaseapp.com", projectId:"system-storage-bd0ed", storageBucket:"system-storage-bd0ed.firebasestorage.app", messagingSenderId:"501351821676", appId:"1:501351821676:web:2926c58dedfc536cea8349" };
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 const dbRef = collection(db, "orders");
 let userRole = "";
 
-// ====== ضغط الصور كما هي تمامًا ======
-const compressImg = (file) => {
-    return new Promise((resolve) => {
-        const reader = new FileReader();
-        reader.readAsDataURL(file);
-        reader.onload = (e) => {
-            const img = new Image();
-            img.src = e.target.result;
-            img.onload = () => {
-                const canvas = document.createElement('canvas');
-                const maxWidth = 600;
-                const scale = maxWidth / img.width;
-                canvas.width = maxWidth; canvas.height = img.height * scale;
-                const ctx = canvas.getContext('2d');
-                ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
-                resolve(canvas.toDataURL('image/jpeg', 0.6));
-            };
-        };
-    });
-};
+const compressImg = (file) => { return new Promise((resolve)=>{ const reader=new FileReader(); reader.readAsDataURL(file); reader.onload=(e)=>{ const img=new Image(); img.src=e.target.result; img.onload=()=>{ const canvas=document.createElement('canvas'); const maxWidth=600; const scale=maxWidth/img.width; canvas.width=maxWidth; canvas.height=img.height*scale; const ctx=canvas.getContext('2d'); ctx.drawImage(img,0,0,canvas.width,canvas.height); resolve(canvas.toDataURL('image/jpeg',0.6)); }; }; }); };
 
-// =====================
-// التكويد التلقائي + أزرار المواطن
-// =====================
+// ====== التكويد التلقائي + أزرار المواطن ======
 document.getElementById('submitBtn').addEventListener('click', async () => {
     const btn = document.getElementById('submitBtn');
     const files = document.getElementById('multiFiles').files;
     const owner = document.getElementById('ownerName').value.trim();
     const nid = document.getElementById('nationalId').value.trim();
     const tel = document.getElementById('phone').value.trim();
-    
-    if (!/^[0-9]{14}$/.test(nid)) { alert("يرجى إدخال 14 رقماً للرقم القومي"); return; }
-    if (!/^01[0125][0-9]{8}$/.test(tel)) { alert("يرجى إدخال رقم هاتف مصري صحيح"); return; }
-    if (!owner || files.length === 0) { alert("يرجى ملء الاسم ورفع الصور"); return; }
 
-    btn.disabled = true; btn.innerText = "جاري المعالجة...";
-    try {
-        const imgArray = [];
-        for (let f of files){ imgArray.push(await compressImg(f)); }
+    if(!/^[0-9]{14}$/.test(nid)){ alert("يرجى إدخال 14 رقماً للرقم القومي"); return; }
+    if(!/^01[0125][0-9]{8}$/.test(tel)){ alert("يرجى إدخال رقم هاتف مصري صحيح"); return; }
+    if(!owner || files.length===0){ alert("يرجى ملء الاسم ورفع الصور"); return; }
+
+    btn.disabled=true; btn.innerText="جاري المعالجة...";
+    try{
+        const imgArray=[];
+        for(let f of files){ imgArray.push(await compressImg(f)); }
 
         // ====== التكويد التلقائي ======
-        let lastCode = 0;
-        const snapshot = await getDocs(query(dbRef, orderBy("vCode", "desc")));
-        snapshot.forEach(docSnap => {
-            const code = parseInt(docSnap.data().vCode);
-            if(!isNaN(code) && code > lastCode) lastCode = code;
-        });
-        const newCode = lastCode + 1;
+        let lastCode=0;
+        const snapshot=await getDocs(query(dbRef, orderBy("vCode","desc")));
+        snapshot.forEach(docSnap=>{ const code=parseInt(docSnap.data().vCode); if(!isNaN(code) && code>lastCode) lastCode=code; });
+        const newCode=lastCode+1;
 
-        const data = {
-            owner, nationalId: nid, phone: tel,
-            address: document.getElementById('address').value,
-            vType: document.getElementById('vType').value,
-            vDesc: document.getElementById('vDesc').value,
-            images: imgArray,
-            timestamp: Date.now(),
-            vCode: newCode.toString()
-        };
-        await addDoc(dbRef, data);
-
+        const data={ owner, nationalId:nid, phone:tel, address:document.getElementById('address').value, vType:document.getElementById('vType').value, vDesc:document.getElementById('vDesc').value, images:imgArray, timestamp:Date.now(), vCode:newCode.toString() };
+        await addDoc(dbRef,data);
         alert(`تم تسجيل طلبك ✅\nرقم المركبة: ${newCode}`);
 
-        // فتح واتساب تلقائي
-        window.open(`https://wa.me/201021102607?text=*طلب تكويد مركبة*%0Aالاسم: ${owner}%0Aالقومي: ${nid}%0Aالكود: ${newCode}`, '_blank');
-
+        window.open(`https://wa.me/201021102607?text=*طلب تكويد مركبة*%0Aالاسم: ${owner}%0Aالقومي: ${nid}%0Aالكود: ${newCode}`,'_blank');
         location.reload();
-    } catch(e){ console.error(e); alert("حدث خطأ!"); btn.disabled = false; }
+    }catch(e){ console.error(e); alert("حدث خطأ!"); btn.disabled=false; }
 });
 
-// ====== أزرار المواطن دائمًا ======
-document.getElementById('callBtn').onclick = () => window.location.href = "tel:01021102607";
-document.getElementById('waBtn').onclick = () => {
-    const owner = document.getElementById('ownerName').value.trim() || "غير محدد";
-    window.open(`https://wa.me/201021102607?text=*طلب تكويد مركبة*%0Aالاسم: ${owner}`, '_blank');
+// أزرار المواطن دائمًا
+document.getElementById('callBtn').onclick=()=>window.location.href="tel:01021102607";
+document.getElementById('waBtn').onclick=()=>{
+    const owner=document.getElementById('ownerName').value.trim()||"غير محدد";
+    window.open(`https://wa.me/201021102607?text=*طلب تكويد مركبة*%0Aالاسم: ${owner}`,'_blank');
 };
 
 // ====== تسجيل دخول المشرف + لوحة التحكم ======
-document.getElementById('loginBtn').addEventListener('click', () => {
-    const u = prompt("اسم المستخدم:"); 
-    const p = prompt("كلمة السر:");
+document.getElementById('loginBtn').addEventListener('click',()=>{
+    const u=prompt("اسم المستخدم:");
+    const p=prompt("كلمة السر:");
     if(u==="Eltohamy" && p==="551855125500") userRole="SUPER";
     else if(u==="Bahe" && p==="55185512") userRole="EDITOR";
     else { alert("خطأ في الدخول!"); return; }
@@ -236,33 +191,30 @@ document.getElementById('loginBtn').addEventListener('click', () => {
     renderAdmin();
 });
 
-// ====== عرض الطلبات للمشرف ======
+// عرض الطلبات للمشرف
 function renderAdmin(){
-    onSnapshot(query(dbRef, orderBy("timestamp","desc")), snap=>{
-        const tableBody = document.getElementById('dataTable');
-        tableBody.innerHTML = '';
+    onSnapshot(query(dbRef, orderBy("timestamp","desc")),snap=>{
+        const tableBody=document.getElementById('dataTable');
+        tableBody.innerHTML='';
         snap.forEach(s=>{
-            const item=s.data(), id=s.id;
+            const item=s.data(),id=s.id;
             const tr=document.createElement('tr');
-            tr.innerHTML=`
-                <td style="font-weight:bold">${item.owner}</td>
-                <td style="mso-number-format:'\\@'">${item.nationalId}</td>
-                <td style="mso-number-format:'\\@'">${item.phone}</td>
-                <td>${item.address}</td>
-                <td>${item.vType}</td>
-                <td>${item.vCode||'⏳'}</td>
-                <td><button class="view-btn">🖼️</button></td>
-                <td>
-                    <button class="code-btn">كود</button>
-                    ${userRole==='SUPER'?'<button class="del-btn" style="background:#e74c3c;color:white;border:none;padding:4px 8px;border-radius:4px;cursor:pointer">حذف</button>':''}
-                </td>`;
-            // عرض الصور
-            tr.querySelector('.view-btn').onclick=()=>{ 
+            tr.innerHTML=`<td style="font-weight:bold">${item.owner}</td><td style="mso-number-format:'\\@'">${item.nationalId}</td><td style="mso-number-format:'\\@'">${item.phone}</td><td>${item.address}</td><td>${item.vType}</td><td>${item.vCode||'⏳'}</td><td><button class="view-btn">🖼️</button></td><td><button class="code-btn">كود</button>${userRole==='SUPER'?'<button class="del-btn" style="background:#e74c3c;color:white;border:none;padding:4px 8px;border-radius:4px;cursor:pointer">حذف</button>':''}</td>`;
+            tr.querySelector('.view-btn').onclick=()=>{
                 const modal=document.getElementById("imgModal");
                 const mainImg=document.getElementById("mainViewImg");
                 const thumbContainer=document.getElementById("modalThumbnails");
                 thumbContainer.innerHTML=''; mainImg.src=item.images[0];
                 item.images.forEach(src=>{
-                    const img=document.createElement('img');
-                    img.src=src; img.style.width="60px"; img.style.height="60px"; img.style.cursor="pointer"; img.style.borderRadius="8px";
-                    img.onclick=()=> main
+                    const img=document.createElement('img'); img.src=src; img.style.width="60px"; img.style.height="60px"; img.style.cursor="pointer"; img.style.borderRadius="8px";
+                    img.onclick=()=>mainImg.src=src; thumbContainer.appendChild(img);
+                });
+                modal.style.display="block";
+            };
+            tr.querySelector('.code-btn').onclick=async ()=>{
+                const code=prompt("أدخل كود المركبة:");
+                if(code){ await updateDoc(doc(db,"orders",id),{vCode:code}); alert("تم التكويد ✅"); }
+            };
+            if(userRole==='SUPER') tr.querySelector('.del-btn').onclick=()=>{if(confirm("حذف؟")) deleteDoc(doc(db,"orders",id));};
+            tableBody.appendChild(tr);
+       
