--- a/index.html
+++ b/index.html
@@ -93,11 +93,10 @@
         <button id="submitBtn" class="btn btn-primary" style="width: 100%; font-size: 1.2rem; margin-top: 20px;">إرسال الطلب ✅</button>
 
         <div class="support-box">
-            <p style="margin-top:0; font-weight:bold; color:var(--primary);">هل تواجه مشكلة أو تريد الاستفسار؟ تواصل معنا:</p>
+            <p style="margin-top:0; font-weight:bold; color:var(--primary);">تواصل مع الدعم الفني للمنظومة:</p>
             <div style="display:flex; justify-content:center; gap:8px; flex-wrap:wrap;">
-                <a href="https://wa.me/201021102607" target="_blank" class="btn btn-wa">💬 واتساب م/ مهند</a>
-                <a href="tel:01021102607" class="btn btn-call">📞 اتصال م/ مهند</a>
-                <a href="https://wa.me/201011111111" target="_blank" class="btn btn-wa" style="background:#128C7E;">💬 واتساب أ/ باهي</a>
+                <a href="https://wa.me/201021102607" target="_blank" class="btn btn-wa">💬 م/ مهند (واتساب)</a>
+                <a href="tel:01021102607" class="btn btn-call">📞 م/ مهند (اتصال)</a>
             </div>
         </div>
     </div>
@@ -155,7 +154,6 @@
     const dbRef = collection(db, "orders");
     let userRole = "";
 
-    // [الحفاظ على مكتبة الصور الأصلية]
     const compressImg = (file) => {
         return new Promise((resolve) => {
             const reader = new FileReader();
@@ -176,7 +174,6 @@
         });
     };
 
-    // إرسال البيانات مع ميزة منع التكرار والتحقق
     document.getElementById('submitBtn').onclick = async () => {
         const btn = document.getElementById('submitBtn');
         const files = document.getElementById('multiFiles').files;
@@ -184,16 +181,14 @@
         const nid = document.getElementById('nationalId').value;
         const phone = document.getElementById('phone').value;
 
-        if (nid.length !== 14) { alert("الرقم القومي يجب أن يكون 14 رقماً"); return; }
-        if (phone.length !== 11) { alert("رقم الهاتف يجب أن يكون 11 رقماً"); return; }
-        if (files.length === 0 || !owner) { alert("أكمل البيانات وارفع الصور"); return; }
+        if (nid.length !== 14 || phone.length !== 11 || files.length === 0 || !owner) { 
+            alert("تأكد من إدخال كافة البيانات (14 رقم قومي و 11 رقم هاتف) ورفع الصور"); return; 
+        }
 
-        // التحقق من عدم التكرار
-        const checkQ = query(dbRef, where("nationalId", "==", nid));
-        const checkSnap = await getDocs(checkQ);
-        if(!checkSnap.empty) { alert("هذا الرقم القومي مسجل مسبقاً في المنظومة!"); return; }
+        const checkSnap = await getDocs(query(dbRef, where("nationalId", "==", nid)));
+        if(!checkSnap.empty) { alert("هذا الرقم القومي مسجل مسبقاً!"); return; }
 
-        btn.disabled = true; btn.innerText = "جاري معالجة الصور وحفظ الطلب...";
+        btn.disabled = true; btn.innerText = "جاري الحفظ...";
         try {
             const imgArray = [];
             for(let f of files) { imgArray.push(await compressImg(f)); }
@@ -209,15 +204,15 @@
         } catch (e) { alert("خطأ في الاتصال"); btn.disabled = false; btn.innerText = "إرسال الطلب ✅"; }
     };
 
-    // نظام التكويد الذكي المطور (سد الثغرات)
+    // نظام التكويد الذكي (البحث عن آخر رقم + التسلسلي)
     async function getSmartNextCode() {
-        const snap = await getDocs(query(dbRef));
-        let codes = [];
-        snap.forEach(d => { if(d.data().vCode) codes.push(parseInt(d.data().vCode)); });
-        let next = 101; 
-        codes.sort((a,b) => a - b);
-        for(let c of codes) { if(c === next) next++; }
-        return next;
+        const snap = await getDocs(dbRef);
+        let maxCode = 100; // البداية الافتراضية
+        snap.forEach(d => {
+            const code = parseInt(d.data().vCode);
+            if(!isNaN(code) && code > maxCode) maxCode = code;
+        });
+        return { last: maxCode, next: maxCode + 1 };
     }
 
     document.getElementById('loginBtn').onclick = () => {
@@ -243,7 +238,7 @@
                 const tr = document.createElement('tr');
                 tr.innerHTML = `
                     <td>${item.owner}</td>
-                    <td style="mso-number-format:'\@'">${item.nationalId}</td>
+                    <td>${item.nationalId}</td>
                     <td>${item.phone}</td>
                     <td>${item.vType}</td>
                     <td style="font-weight:bold; color:${item.vCode?'#27ae60':'#e74c3c'}">${item.vCode || '⏳'}</td>
@@ -255,16 +250,20 @@
                     </td>`;
 
                 tr.querySelector('.btn-auto').onclick = async () => {
-                    if(item.vCode) return alert("مكودة بالفعل");
-                    const next = await getSmartNextCode();
-                    if(confirm(`صرف الكود المتاح ${next}؟`)) {
-                        await updateDoc(doc(db, "orders", id), { vCode: next.toString() });
+                    if(item.vCode) return alert("هذه المركبة مكودة بالفعل برقم: " + item.vCode);
+                    const info = await getSmartNextCode();
+                    if(confirm(`آخر رقم مسجل هو (${info.last}).\nهل تريد تخصيص الرقم الجديد (${info.next})؟`)) {
+                        await updateDoc(doc(db, "orders", id), { vCode: info.next.toString() });
                     }
                 };
 
                 tr.querySelectorAll('.btn')[1].onclick = async () => {
                     const c = prompt("أدخل الكود يدوياً:");
-                    if(c) await updateDoc(doc(db, "orders", id), { vCode: c });
+                    if(c) {
+                        const checkCode = await getDocs(query(dbRef, where("vCode", "==", c.toString())));
+                        if(!checkCode.empty) return alert("خطأ: هذا الكود محجوز مسبقاً لمركبة أخرى!");
+                        await updateDoc(doc(db, "orders", id), { vCode: c.toString() });
+                    }
                 };
 
                 if(userRole==='SUPER') tr.querySelector('.btn-del').onclick = () => { if(confirm("حذف نهائي؟")) deleteDoc(doc(db, "orders", id)); };
@@ -273,17 +272,15 @@
                     const modal = document.getElementById("imgModal");
                     const mainImg = document.getElementById("mainViewImg");
                     const thumbContainer = document.getElementById("modalThumbnails");
-                    thumbContainer.innerHTML = '';
-                    mainImg.src = item.images[0];
+                    thumbContainer.innerHTML = ''; mainImg.src = item.images[0];
                     item.images.forEach(src => {
                         const img = document.createElement('img');
-                        img.src = src; img.style.width="60px"; img.style.cursor="pointer"; img.style.borderRadius="5px";
+                        img.src = src; img.style.width="60px"; img.style.cursor="pointer";
                         img.onclick = () => mainImg.src = src;
                         thumbContainer.appendChild(img);
                     });
                     modal.style.display = "block";
                 };
-
                 tableBody.appendChild(tr);
             });
             document.getElementById('statTotal').innerText = total;
